S-2D: JVM flags & Java 11 compiler config
- Update maven-surefire-plugin argLine with --add-opens flags for Java 11+ module system
- Add maven-compiler-plugin 3.12.1 with source/target/release 11
- Replace deprecated constructors: new Integer() -> Integer.valueOf(),
  new Boolean() -> Boolean.valueOf(), new Long() -> Long.valueOf()
  across 362 files

Note: Full Java 11 compilation requires JAXB/javax.activation dependencies
to be added (S-2A/S-2C prerequisite).