@@ -27,7 +27,7 @@ import org.kuali.kfs.module.cg.businessobject.AgencyAddress;
 public enum ARAgencyAddressFixture {
 
 
-    CG_AGENCY_ADD1("11505", new Long(26), "P"), CG_AGENCY_ADD2("11505", new Long(26), "A");
+    CG_AGENCY_ADD1("11505", Long.valueOf(26), "P"), CG_AGENCY_ADD2("11505", Long.valueOf(26), "A");
 
     private String agencyNumber;
     private Long agencyAddressIdentifier;
